--- a/share/man/man5/terranix-modules.5
+++ b/share/man/man5/terranix-modules.5
@@ -204,6 +204,7 @@ string
 Data objects, are queries to use resources which are already exist, as if they are created by a the resource option\&. See for more details : https://www\&.terraform\&.io/docs/configuration/data\-sources\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -217,6 +218,7 @@ Data objects, are queries to use resources which are already exist, as if they a
 Define terraform variables with file scope\&. Like modules this is terraform intern and terranix has better ways\&. See for more details : https://www\&.terraform\&.io/docs/configuration/locals\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -230,6 +232,7 @@ Define terraform variables with file scope\&. Like modules this is terraform int
 A terraform module, to define multiple resources, for sharing or duplication\&. The terraform module system, and has nothing to do with the module system of terranix or nixos\&. See for more details : https://www\&.terraform\&.io/docs/configuration/modules\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -243,6 +246,7 @@ A terraform module, to define multiple resources, for sharing or duplication\&. 
 Useful in combination with terraform_remote_state\&. See for more details : https://www\&.terraform\&.io/docs/configuration/outputs\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -256,6 +260,7 @@ Useful in combination with terraform_remote_state\&. See for more details : http
 Define you API connection\&. Don\*(Aqt use secrets in here, they will be visible in the nix\-store and the resulting config\&.tf\&.json\&. Instead use terraform variables\&. See for more details : https://www\&.terraform\&.io/docs/configuration/providers\&.html or https://www\&.terraform\&.io/docs/providers/index\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -443,6 +448,7 @@ string
 The backbone of terraform and terranix to change and create state\&. See for more details : https://www\&.terraform\&.io/docs/configuration/resources\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -456,6 +462,7 @@ The backbone of terraform and terranix to change and create state\&. See for mor
 Terraform configuration\&. But for backends have a look at the terranix options backend\&.etcd, backend\&.local and backend\&.s3\&. See for more details : https://www\&.terraform\&.io/docs/configuration/terraform\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
@@ -507,6 +514,7 @@ null
 Input Variables, which can be set by `\-\-var=name` or by environment variables prefixt with `TF_VAR_`\&. Usually used in terraform modules or to ask for API tokens\&. See for more details : https://www\&.terraform\&.io/docs/configuration/variables\&.html
 .sp
 \fIType:\fR
+bool, int, float or str
 .sp
 \fIDefault:\fR
 { }
