--- a/share/man/man1/terranix.1
+++ b/share/man/man1/terranix.1
@@ -88,6 +88,82 @@ terranix > config\&.tf\&.json && terraform init && terraform apply
 .if n \{\
 .RE
 .\}
+.SS "Example: wrapper driven by _meta\&.package"
+.PP
+Sometimes you want your terranix module to declare which Terraform implementation (and plugins) it expects, and then build a small wrapper around the evaluated result\&.
+.PP
+Create a
+config\&.nix:
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+{ pkgs, \&.\&.\&. }:
+{
+  _meta\&.package = pkgs\&.opentofu\&.withPlugins (p: [ p\&.hashicorp_null ]);
+
+  terraform\&.required_providers\&.null = {
+    source = "hashicorp/null";
+    version = ">= 3\&.0\&.0";
+  };
+
+  resource\&.null_resource\&.hello = {
+    triggers\&.message = "hello from terranix";
+  };
+}
+.fi
+.if n \{\
+.RE
+.\}
+.PP
+Then create a
+tofu\&.nix
+wrapper which uses both the evaluated config and evaluated package:
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+{ pkgs ? import <nixpkgs> { } }:
+let
+  terranixEval = import <terranix/core/default\&.nix> {
+    inherit pkgs;
+    modules = [ \&./config\&.nix ];
+  };
+
+  configTfJson = (pkgs\&.formats\&.json { })\&.generate "config\&.tf\&.json" terranixEval\&.config;
+  tofuBin = pkgs\&.lib\&.getExe terranixEval\&._meta\&.package;
+in
+pkgs\&.writeShellApplication {
+  name = "tofu";
+  text = \*(Aq\*(Aq
+    ln \-sf ${configTfJson} \&./config\&.tf\&.json
+    exec ${tofuBin} "$@"
+  \*(Aq\*(Aq;
+}
+.fi
+.if n \{\
+.RE
+.\}
+.PP
+Build and run it (no flakes):
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+nix\-build tofu\&.nix \-I terranix=/path/to/terranix
+\&./result/bin/tofu init
+\&./result/bin/tofu apply
+.fi
+.if n \{\
+.RE
+.\}
+.PP
+_meta
+is removed before JSON rendering, so it never appears in
+config\&.tf\&.json\&.
 .SH "OPTIONS"
 .PP
 \-q \(enquiet
